...

  const handleEditProfilePress = () => {
    navigation.navigate('EditProfile');
  };

  return (
    <View style={styles.container} testID="SettingPage">
      <View style={styles.userInfoContainer}>
        <Image
          source={{uri: 'https://placekitten.com/200/200'}}
          style={styles.avatar}
        />
        <Text style={styles.nickname}>User</Text>
      </View>
      <TouchableOpacity
        testID="NavigateToEditProfile"
        onPress={handleEditProfilePress}
        style={styles.editProfileButton}>
        <Text style={styles.editProfileButtonText}>Edit Profile</Text>
      </TouchableOpacity>
      <View style={styles.listContainer}>
        <TouchableOpacity style={styles.listButton}>
...
